feat: added add category handler & route
Implemented: multer middleware, upload to cloudinary  helper function
