# Backend/src/routes/v1/index.ts
@@ -1,8 +1,10 @@
 import { Router } from 'express';
 import userRoutes from './user.route.js';
+import categoryRoutes from './category.route.js';
 
 const v1Routes = Router();
 
 v1Routes.use('/user', userRoutes);
+v1Routes.use('/category', categoryRoutes);
 
 export default v1Routes
